test/sparse/vass/sparse-mismatch-dom-err-arr1dom2dom1.good
sparse-mismatch-dom-err-arr1dom2dom1.chpl:7: error: halt reached - Sparse domains can't be zippered with anything other than themselves and their arrays
